--- a/final_report.Rmd
+++ b/final_report.Rmd
@@ -27,7 +27,7 @@ The dataset contains 47 clinical variables. At the beginning, we tried to includ
 
 # Data Preprocessing
 
-The initial dataset has several missing values among the different features. So, before going into analysis and modeling, we first clean up and pre-process the data. First, we remove all the observations that have missing values for vital status, because vital status is the one we wish to forecast or predict and we cannot use missing values for prediction. We tried to see if the missing values in vital status were censored. However, none of the other variables that have similar information, such as days to last follow up, or days to death, provided any useful information, since they were also missing. So, we decided to drop them all. Then, we decided to remove variables with more than 8,000 missing values. Because it means that more than half of the observations in these variables were missing, which we believe will cause too much inaccuracy after data imputation. After that, we used mice() to impute those missing values. The mice package implements a method to deal with missing data and it generates Multivariate Imputations by Chained Equations. And finally, we randomly split the dataset into two where the training set contains 70% of the data, and the test set contains the rest 30% of the data.
+The initial dataset had several missing values among the different features. So, before going into analysis and modeling, we had to clean up and pre-process the data. First, we removed all the observations that had missing values for vital status, because vital status was the one that we wish to forecast or predict and we cannot use missing values for prediction. We tried to see if the missing values in vital status were censored. However, none of the other variables that had similar information, such as days to last follow up, days to death, or days to birth, provided any useful information, since they were also missing. So, we decided to drop them all. Then, we decided to remove variables with more than 8,000 missing values. Because it means that more than half of the observations in these variables were missing, which we believed would cause too much inaccuracy after data imputation. After that, we used mice() to impute those missing values. The mice package implemented a method to deal with missing data and it generates Multivariate Imputations by Chained Equations. And finally, we randomly split the dataset into two where the training set contained 70% of the data, and the test set contained the rest 30% of the data.
 
 ```{r, echo=FALSE, message=FALSE}
 # Necessary libraries
@@ -148,6 +148,8 @@ We also performed some machine learning modeling and evaluated the effectiveness
 
 ### Random Forest
 
+After the missing values were imputed, we first tried to apply the random forest algorithm to that dataset. In order to fit the dataset into the model, we needed to remove categorical variables that had only one level since they were not suitable for random forest models. Then we ran the random forest algorithm using the training set that contains 70 percent of the original data, and we got the following plot.
+
 ```{r, echo=FALSE}
 # Random Forest:
 
@@ -171,11 +173,13 @@ rf <- randomForest(vital_status ~ ., data=train_rf, na.action = na.omit)
 plot(rf, main = "Random Forest", xlim = range(0, 150))
 ```
 
+The black line in the plot showed the out-of-bag (OOB) error that measuring the prediction error of random forests. We could see that when the number of trees is about 20, the prediction error was kind of low and the error kept nearly unchanged when the number of trees increased. So, we decided to choose 20 as the number of trees for our random forest algorithm. The following table showed the overall accuracy of the prediction using the random forest model.
+
 ```{r, echo=FALSE}
 rf2 <- randomForest(vital_status ~ ., data=train_rf, na.action = na.omit, ntree = 20)
 
 # Plot to see the importance of different variables on vital status
-varImpPlot(rf2, main = "Importance of the Variables")
+# varImpPlot(rf2, main = "Importance of the Variables")
 ```
 
 
@@ -347,7 +351,7 @@ data_subset_nn_normalized <- data_subset_nn_normalized[complete.cases(data_subse
 ```
 
 
-After making dummy variables for every categorical feature and normalizing each numerical feature, several instances with missing values were removed, therefore the total number of instances in the overall neural network dataset was 6916, before it was split into training and testing subsets. Prior to the removal of instances with missing values for the numerical features, there were a total of 12587 instances in the dataset.
+After making dummy variables for every categorical feature and normalizing each numerical feature, several instances with missing values were removed, therefore the total number of instances in the overall neural network dataset was 6,916, before it was split into training and testing subsets. Prior to the removal of instances with missing values for the numerical features, there were a total of 12,587 instances in the dataset.
 
 
 ```{r, echo=FALSE}
