--- a/final_report.Rmd
+++ b/final_report.Rmd
@@ -23,6 +23,7 @@ knitr::opts_chunk$set(echo = TRUE, warning = FALSE)
 For this project, our group chose to perform statistical analysis using the Clinical Data Set from the Clinical Package of bone marrow cancer data. It was collected from the National Cancer Institute (NCI) genomic data portal. The version of the dataset we used was released by October 29, 2021. The bone marrow cancer can damage the bones, immune system, kidneys, and red blood cell count. The dataset contains 16,029 different cases of bone marrow cancer. We planned on using it for survival analysis and machine learning methodologies.
 
 # Data Description
+
 The dataset contains 47 clinical variables. At the beginning, we tried to include the biospecimen data in order to increase the dimension of our dataset, but we found that most of those genomics data were missing, which would not provide us too much help. So, we decided to stick with the clinical data of bone marrow. Vital status means whether the patients were alive or dead at the time the data were collected. Our dataset contains 9,036 alive cases and 3,551 dead cases. Others were either missing or recorded as "unknown" or "not reported".
 
 # Data Preprocessing
@@ -365,9 +366,6 @@ test_nn <- data_subset_nn_normalized[-train_ind,]
 ```
 
 
-It takes under 50 minutes to generate the neural network model, trained using the training subset. It could probably be sped up using services such as Great Lakes, etc.
-
-
 ```{r, echo=FALSE}
 ## Neural Network
 ## (https://datascienceplus.com/neuralnet-train-and-test-neural-networks-using-r/)
@@ -427,7 +425,7 @@ test_cm$overall
 
 For the random forest algorithm with 20 trees, the accuracy of prediction for both the training set and testing set were more than 99.5%. The accuracy would still be above 99% if we changed the number of trees to 10. The perforamce of the prediction looked great, but such a high accuracy in both training set and testing set may indicate some potential problems when applying the same algorithm to a totally new dataset. So, we have to be cautious and re-train our model when we encounter a new set of bone marrow cancer data. 
 
-
+It takes under 50 minutes to generate the neural network model, trained using the training subset. It could probably be sped up using cloud computing services such as Great Lakes, etc.
 
 # Division of Work:
 
