--- a/final_report.Rmd
+++ b/final_report.Rmd
@@ -261,6 +261,7 @@ data_subset_rf <- complete(data_imp)
 data_subset_rf <- subset(data_subset_rf, select = -c(morphology, primary_diagnosis))
 
 # Apply random forest to the data
+set.seed(625)
 sample <- sample.split(data_subset_rf$vital_status, SplitRatio = .7)
 train_rf <- subset(data_subset_rf, sample == TRUE)
 test_rf  <- subset(data_subset_rf, sample == FALSE)
@@ -290,17 +291,11 @@ rf2 <- randomForest(vital_status ~ ., data=train_rf, na.action = na.omit, ntree 
 # p1 <- predict(rf2, train_rf)
 # p2 <- predict(rf2, test_rf)
 
-# Training set confusion matrix
-print("Training set accuracy:")
-train_cm <- confusionMatrix(predict(rf2, train_rf), train_rf$vital_status)
-train_cm$overall[1]
-cat("", sep="\n\n")
+# Training set confusion matrix info
+train_rf_cm <- confusionMatrix(predict(rf2, train_rf), train_rf$vital_status)
 
-# Testing set confusion matrix
-print("Testing set confusion matrix and accuracy:")
-test_cm <- confusionMatrix(predict(rf2, test_rf), test_rf$vital_status)
-test_cm$table
-test_cm$overall[1]
+# Testing set confusion matrix info
+test_rf_cm <- confusionMatrix(predict(rf2, test_rf), test_rf$vital_status)
 ```
 
 ### Neural Network
@@ -420,8 +415,6 @@ names(data_subset_nn_normalized) <- c(
   "site_of_resection_or_biopsy_Cheek_mucosa",
   "site_of_resection_or_biopsy_Connective_and_other_soft_tissues",
   "site_of_resection_or_biopsy_Connective_and_other_soft_tissues_NOS",
-  "site_of_resection_or_biopsy_Head_face_or_neck_NOS",
-  "site_of_resection_or_biopsy_Hematopoietic_system_NOS",
   "site_of_resection_or_biopsy_Intra_abdominal_lymph_nodes",
   "site_of_resection_or_biopsy_Kidney_NOS",
   "site_of_resection_or_biopsy_Lip_NOS",
@@ -439,6 +432,7 @@ names(data_subset_nn_normalized) <- c(
   "site_of_resection_or_biopsy_Spleen",
   "site_of_resection_or_biopsy_Testis_NOS",
   "site_of_resection_or_biopsy_Vestibule_of_mouth",
+  "site_of_resection_or_biopsy_NA",
   "tissue_or_organ_of_origin_Bone_marrow",
   "tissue_or_organ_of_origin_Bones_of_skull_and_face",
   "tissue_or_organ_of_origin_Hematopoietic_system_NOS",
@@ -458,6 +452,7 @@ After making dummy variables for every categorical feature and normalizing each 
 
 ```{r, echo=FALSE}
 # Splitting the normalized neural network dataset into training and testing subsets
+set.seed(625)
 train_ind <- sample(seq_len(nrow(data_subset_nn_normalized)),
                     size = floor(0.7 * nrow(data_subset_nn_normalized)))
 
@@ -472,14 +467,14 @@ test_nn <- data_subset_nn_normalized[-train_ind,]
 ## (http://uc-r.github.io/ann_classification)
 
 # Making the neural network model
-# start <- Sys.time()     <== for timing the neural network model generation
-nn <- neuralnet(vital_status_Alive ~ age_at_index + days_to_birth + age_at_diagnosis + days_to_last_follow_up + days_to_last_known_disease_status + project_id_BEATAML1.0_COHORT + project_id_BEATAML1.0_CRENOLANIB + project_id_CGCI_BLGSP + project_id_GENIE_DFCI + project_id_GENIE_JHU + project_id_GENIE_MDA + project_id_GENIE_MSK + project_id_GENIE_UHN + project_id_GENIE_VICC + project_id_MMRF_COMMPASS +  project_id_OHSU_CNL + project_id_TARGET_ALL_P1 + project_id_TARGET_ALL_P2 + project_id_TARGET_ALL_P3 + project_id_TARGET_AML + project_id_TARGET_NBL + project_id_TCGA_LAML + ethnicity_hispanic + ethnicity_not_hispanic + gender_female + gender_male + race_ameri_ind_or_alaska + race_asian +  race_black_or_afr_ameri + race_hawaiian_or_pacific_islander + race_other + race_white + iss_stage_I + iss_stage_II + iss_stage_III + site_of_resection_or_biopsy_Abdomen_NOS + site_of_resection_or_biopsy_Blood + site_of_resection_or_biopsy_Bone_marrow + site_of_resection_or_biopsy_Bones_of_skull_and_face + site_of_resection_or_biopsy_Cheek_mucosa + site_of_resection_or_biopsy_Connective_and_other_soft_tissues + site_of_resection_or_biopsy_Connective_and_other_soft_tissues_NOS + site_of_resection_or_biopsy_Head_face_or_neck_NOS + site_of_resection_or_biopsy_Hematopoietic_system_NOS + site_of_resection_or_biopsy_Intra_abdominal_lymph_nodes + site_of_resection_or_biopsy_Kidney_NOS + site_of_resection_or_biopsy_Lip_NOS + site_of_resection_or_biopsy_Liver + site_of_resection_or_biopsy_Lower_gum + site_of_resection_or_biopsy_Lymph_nodes_of_head_face_neck + site_of_resection_or_biopsy_Mandible + site_of_resection_or_biopsy_Mouth_NOS + site_of_resection_or_biopsy_Ovary + site_of_resection_or_biopsy_Pelvis_NOS + site_of_resection_or_biopsy_Peritoneum_NOS + site_of_resection_or_biopsy_Retroperitoneum + site_of_resection_or_biopsy_Small_intestine_NOS + site_of_resection_or_biopsy_Specified_parts_of_peritoneum + site_of_resection_or_biopsy_Spleen + site_of_resection_or_biopsy_Testis_NOS + site_of_resection_or_biopsy_Vestibule_of_mouth + tissue_or_organ_of_origin_Bone_marrow + tissue_or_organ_of_origin_Bones_of_skull_and_face + tissue_or_organ_of_origin_Hematopoietic_system_NOS + tissue_or_organ_of_origin_Orbit_NOS,
+# start <- Sys.time()     #<== for timing the neural network model generation
+nn <- neuralnet(vital_status_Alive ~ age_at_index + days_to_birth + age_at_diagnosis + days_to_last_follow_up + days_to_last_known_disease_status + project_id_BEATAML1.0_COHORT + project_id_BEATAML1.0_CRENOLANIB + project_id_CGCI_BLGSP + project_id_GENIE_DFCI + project_id_GENIE_JHU + project_id_GENIE_MDA + project_id_GENIE_MSK + project_id_GENIE_UHN + project_id_GENIE_VICC + project_id_MMRF_COMMPASS +  project_id_OHSU_CNL + project_id_TARGET_ALL_P1 + project_id_TARGET_ALL_P2 + project_id_TARGET_ALL_P3 + project_id_TARGET_AML + project_id_TARGET_NBL + project_id_TCGA_LAML + ethnicity_hispanic + ethnicity_not_hispanic + gender_female + gender_male + race_ameri_ind_or_alaska + race_asian +  race_black_or_afr_ameri + race_hawaiian_or_pacific_islander + race_other + race_white + iss_stage_I + iss_stage_II + iss_stage_III + site_of_resection_or_biopsy_Abdomen_NOS + site_of_resection_or_biopsy_Blood + site_of_resection_or_biopsy_Bone_marrow + site_of_resection_or_biopsy_Bones_of_skull_and_face + site_of_resection_or_biopsy_Cheek_mucosa + site_of_resection_or_biopsy_Connective_and_other_soft_tissues + site_of_resection_or_biopsy_Connective_and_other_soft_tissues_NOS + site_of_resection_or_biopsy_Intra_abdominal_lymph_nodes + site_of_resection_or_biopsy_Kidney_NOS + site_of_resection_or_biopsy_Lip_NOS + site_of_resection_or_biopsy_Liver + site_of_resection_or_biopsy_Lower_gum + site_of_resection_or_biopsy_Lymph_nodes_of_head_face_neck + site_of_resection_or_biopsy_Mandible + site_of_resection_or_biopsy_Mouth_NOS + site_of_resection_or_biopsy_Ovary + site_of_resection_or_biopsy_Pelvis_NOS + site_of_resection_or_biopsy_Peritoneum_NOS + site_of_resection_or_biopsy_Retroperitoneum + site_of_resection_or_biopsy_Small_intestine_NOS + site_of_resection_or_biopsy_Specified_parts_of_peritoneum + site_of_resection_or_biopsy_Spleen + site_of_resection_or_biopsy_Testis_NOS + site_of_resection_or_biopsy_Vestibule_of_mouth + site_of_resection_or_biopsy_NA + tissue_or_organ_of_origin_Bone_marrow + tissue_or_organ_of_origin_Bones_of_skull_and_face + tissue_or_organ_of_origin_Hematopoietic_system_NOS + tissue_or_organ_of_origin_Orbit_NOS,
                 data=train_nn,
                 hidden=c(50, 10),#c(50, 10),
                 linear.output=FALSE,
                 threshold=0.01)
-# end <- Sys.time()       <== for timing the neural network model generation
-# end - start             <== for timing the neural network model generation
+# end <- Sys.time()       #<== for timing the neural network model generation
+# end - start             #<== for timing the neural network model generation
 ```
 
 
@@ -492,39 +487,58 @@ nn <- neuralnet(vital_status_Alive ~ age_at_index + days_to_birth + age_at_diagn
 ```{r, echo=FALSE}
 # Evaluating the model's accuracy
 prediction_threshold <- 0.5
-train_nn_results <- compute(nn, train_nn)
-test_nn_results <- compute(nn, test_nn)
+train_prediction <- predict(nn, train_nn)
+test_prediction <- predict(nn, test_nn)
 
-train_prediction <- train_nn_results$net.result
 train_prediction[train_prediction >= prediction_threshold] <- 1
 train_prediction[train_prediction < prediction_threshold] <- 0
-train_prediction <- c(train_prediction)
+# train_prediction <- c(train_prediction)
 train_actual <- train_nn$vital_status_Alive
 
-test_prediction <- test_nn_results$net.result
 test_prediction[test_prediction >= prediction_threshold] <- 1
 test_prediction[test_prediction < prediction_threshold] <- 0
-test_prediction <- c(test_prediction)
+# test_prediction <- c(test_prediction)
 test_actual <- test_nn$vital_status_Alive
 
-# Training set confusion matrix
-print("Training set accuracy:")
-train_cm <- confusionMatrix(predict(rf2, train_rf), train_rf$vital_status)
-train_cm$overall[1]
+# Training set confusion matrix info
+train_nn_cm <- confusionMatrix(factor(train_prediction), factor(train_actual))
+
+# Testing set confusion matrix info
+test_nn_cm <- confusionMatrix(factor(test_prediction), factor(test_actual))
+```
+
+### Model Results
+
+```{r, echo=FALSE}
+# Model accuracies across training and testing sets
+print("Model accuracies across training and testing sets:")
+model_accuracies <- data.frame(
+  "Model" = c(rep("Random Forest", 2), rep("Neural Network", 2)),
+  "Training/Testing Set" = c(rep(c("Training", "Testing"), 2)),
+  "Accuracy" = c(train_rf_cm$overall[1], test_rf_cm$overall[1], train_nn_cm$overall[1], test_nn_cm$overall[1])
+)
+# model_accuracies
+knitr::kable(model_accuracies)
+```
+
+```{r, echo=FALSE}
+# Model testing set confusion matrices
+print("Random forest testing set confusion matrix:")
+test_rf_cm$table
 cat("", sep="\n\n")
 
-# Testing set confusion matrix
-print("Testing set confusion matrix and accuracy:")
-test_cm <- confusionMatrix(predict(rf2, test_rf), test_rf$vital_status)
-test_cm$table
-test_cm$overall[1]
+# Neural Network
+print("Neural network testing set confusion matrix:")
+test_nn_cm$table
 ```
 
 # Results and Conclusion
 
-For the random forest algorithm with 20 trees, the accuracy of prediction for both the training set and testing set were more than 99.5%. The accuracy would still be above 99% if we changed the number of trees to 10. The perforamce of the prediction looked great, but such a high accuracy in both training set and testing set may indicate some potential problems when applying the same algorithm to a totally new dataset. So, we have to be cautious and re-train our model when we encounter a new set of bone marrow cancer data. 
+For the random forest algorithm with 20 trees, the accuracy of prediction for both the training set and the testing set were more than 99.5%. The accuracy would still be above 99% if we changed the number of trees to 10. The performance of the prediction looked great, but such a high accuracy in both the training set and testing set may indicate some potential problems when applying the same algorithm to a totally new dataset. So, we have to be cautious and re-train our model when we encounter a new set of bone marrow cancer data. 
 
-It takes under 50 minutes to generate the neural network model, trained using the training subset. It could probably be sped up using cloud computing services such as Great Lakes, etc.
+For the neural network model, with 2 hidden layers consisting of 50 nodes first and then 10 nodes, the accuracy of prediction for both the training set and the testing set were more than 97%. The results of this model is quite promising, as the neural network was able to make many accurate predictions, but they were slightly less than the results of the random forest model. But as mentioned with the previous model, such a high accuracy in both the training set and testing set may indicate problems when the same algorithm is applied to a completely different dataset. Hence, it may be ideal to re-train the model when we work a brand new bone marrow cancer data set.
+
+Additionally, it takes under 50 minutes to generate the neural network model, trained using the training subset. It could probably be sped up using cloud computing services such as Great Lakes, AWS, etc.
 
 # Division of Work:
 
