Slightly changed the text in conclusion part

--- a/final_report.Rmd
+++ b/final_report.Rmd
@@ -28,7 +28,7 @@ The dataset contains 47 clinical variables. At the beginning, we tried to includ
 
 # Data Preprocessing
 
-The initial dataset had several missing values among the different features. So, before going into analysis and modeling, we had to clean up and pre-process the data. First, we removed all the observations that had missing values for vital status, because vital status was the one that we wish to forecast or predict and we cannot use missing values for prediction. We tried to see if the missing values in vital status were censored. However, none of the other variables that had similar information, such as days to last follow up, days to death, or days to birth, provided any useful information, since they were also missing. So, we decided to drop them all. Then, we decided to remove variables with more than 8,000 missing values. Because it means that more than half of the observations in these variables were missing, which we believed would cause too much inaccuracy after data imputation. After that, we used mice() to impute those missing values. The mice package implemented a method to deal with missing data and it generates Multivariate Imputations by Chained Equations. And finally, we randomly split the dataset into two where the training set contained 70% of the data, and the test set contained the rest 30% of the data.
+The initial dataset had several missing values among the different features. So, before going into analysis and modeling, we had to clean up and pre-process the data. First, we removed all the observations that had missing values for vital status, because vital status was the one that we wish to forecast or predict and we cannot use missing values for prediction. We tried to see if the missing values in vital status were censored. However, none of the other variables that had similar information, such as days to last follow up, days to death, or days to birth, provided any useful information, since they were also missing. So, we decided to drop them all. Then, we decided to remove variables with more than 8,000 missing values. Because it means that more than half of the observations in these variables were missing, which we believed would cause too much inaccuracy after data imputation. After that, we used the mice function to impute those missing values. The mice package implemented a method to deal with missing data and it generated Multivariate Imputations by Chained Equations. And finally, we randomly split the dataset into two where the training set contained 70% of the data, and the test set contained the rest 30% of the data.
 
 ```{r, echo=FALSE, message=FALSE}
 # Necessary libraries
@@ -536,9 +536,7 @@ test_nn_cm$table
 
 # Results and Conclusion
 
-For the random forest algorithm with 20 trees, the accuracy of prediction for both the training set and the testing set were more than 99.5%. The accuracy would still be above 99% if we changed the number of trees to 10. The performance of the prediction looked great, but such a high accuracy in both the training set and testing set may indicate some potential inflexibility when applying the same model to a totally new dataset. So, we have to be cautious and re-train our model when we apply to a new set of bone marrow cancer data. 
-
-For the neural network model, with 2 hidden layers consisting of 50 nodes first and then 10 nodes, the accuracy of prediction for both the training set and the testing set were more than 97%. The results of this model is quite promising, as the neural network was able to make many accurate predictions, but they were slightly less than the results of the random forest model. But as mentioned with the previous model, such a high accuracy in both the training set and testing set may indicate problems when the same algorithm is applied to a completely different dataset. Hence, it may be ideal to re-train the model when we work a brand new bone marrow cancer data set.
+For the random forest algorithm with 20 trees, the accuracy of prediction for both the training set and the testing set were more than 99.5%. The accuracy would still be above 99% if we changed the number of trees to 10. The performance of the prediction looked great, but such a high accuracy in both the training set and testing set may indicate some potential inflexibility when applying the same model to a totally new dataset. For the neural network model, with 2 hidden layers consisting of 50 nodes first and then 10 nodes, the accuracy of prediction for both the training set and the testing set were more than 97%. The results of this model is quite promising, as the neural network was able to make many accurate predictions, but they were slightly less than the results of the random forest model. Same as what mentioned in the previous model, such a high accuracy in both the training set and testing set may indicate problems when the same algorithm is applied to a completely different dataset. Hence, it may be ideal to re-train both models when we work on a brand new bone marrow cancer data set.
 
 Additionally, it takes under 50 minutes to generate the neural network model, trained using the training subset. It could probably be sped up using cloud computing services such as Great Lakes, AWS, etc.
 
